--- a/index.html
+++ b/index.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
+
 <body>
-    
+
+
+    <section class="wrapper">
+        <div class="wrapper__music">
+            <audio class="audio_Effect" src="./Music/dver.mp3"></audio>
+            <audio class="music" src="./Music/Among Us - among us sembari_[mp3mob.net].mp3" loop></audio>
+        </div>
+        <div class="wrapper__root__wrapper__cards">
+
+        </div>
+    </section>
+
+    <script src="./js/task.js" type="module"></script>
+    <script src="./js/music.js" type="module"></script>
 </body>
+
 </html>
