--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 
     <section class="wrapper">
         <div class="wrapper__music">
+            <input id="volume_level" type="range" />
             <audio class="audio_Effect" src="./Music/dver.mp3"></audio>
-            <audio class="music" src="./Music/Among Us - among us sembari_[mp3mob.net].mp3" loop></audio>
+            <audio class="music" src="./Music/Among Us - among us sembari_[mp3mob.net].mp3" allow="autoplay" loop></audio>
         </div>
         <div class="wrapper__root__wrapper__cards">
 
