--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/game.css">
 </head>
 
 <body>
@@ -16,14 +16,14 @@
         <div class="wrapper__music">
             <input id="volume_level" type="range" />
             <audio class="audio_Effect" src="./Music/dver.mp3"></audio>
-            <audio class="music" src="./Music/Among Us - among us sembari_[mp3mob.net].mp3" allow="autoplay" loop></audio>
+            <audio class="music" src="./Music/mainMusic.mp3" loop></audio>
         </div>
         <div class="wrapper__root__wrapper__cards">
 
         </div>
     </section>
 
-    <script src="./js/task.js" type="module"></script>
+    <script src="./js/game.js" type="module"></script>
     <script src="./js/music.js" type="module"></script>
 </body>
 
