--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
             <input id="volume_level" type="range" />
             <audio class="audio_Effect" src="./Music/dver.mp3"></audio>
             <audio class="music" src="./Music/mainMusic.mp3" loop></audio>
+            <audio  class='correct_audio' src="./music/correct.mp3"></audio>
+            <audio class="in_correct" src="./music/inCorrect.mp3"></audio>
         </div>
         <div class="wrapper__root__wrapper__cards">
 
