--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brawl-Stars-Cards</title>
+    <link rel="shortcut icon" href="./img/faveIcon.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -13,6 +14,10 @@
     <main class="game_main">
                 <!-- !!!!!!!!!!MainScreen!!!!!!!! -->
         <section class="main">
+            <div class="wrapper_titleBtn">
+            <h4 class="h4_title">Background music turn on ?</h4>
+            <h4 class="h4_title">Press on title game</h4>
+            </div>
             <div class="main_title_wrapper">
                 <h2 class="main_title among_title"> Among </h2>
                 <h1 class="main_title us_title"> US </h1>
@@ -65,7 +70,6 @@
                 <button class="about_us button">About us</button>
                 <button class="exit button">Exit</button>
             </div>
-            <!-- <button class="testbtn">hggjghjg</button> -->
         </section>
 
             <!-- !!!!!!!!GAme!!!!!!!!!! -->
@@ -99,14 +103,22 @@
 
         <div id="myModal" class="modalEndGame">
             <div class="modal_content">
-                <!-- <video class="video" preload="auto" src="./video/video.mp4"></video> -->
                 <video class="video">
                     <source src="./video/video.mp4" type="video/mp4">
                 </video>
                 <div class="btn_box">
-                    <button class="btn again">Try Again</button>
                     <button class="btn menu">Main Menu</button>
                 </div>
+            </div>
+        </div>
+
+        <!-- !!!!!!!!!!!!!Victory modal!!!!!!!!!!!!!!!! -->
+        <div class="victory_modal">
+            <div class="victory_modal_content">
+                <video class="victory_video" src="./video/victoryDance.mp4"></video>
+            <div class="button_box">
+                <button class="VicButton vic_menu">Main Menu</button>
+            </div>
             </div>
         </div>
     </main>
